--- a/argon.css
+++ b/argon.css
@@ -11,6 +11,7 @@ section{
     height: 100vh;
     clip-path: polygon(0 0, 100% 0, 100% 86%, 0 96%);
     padding: 20px 100px 0px;
+    overflow: hidden;
 }
 section nav{
     display: flex;
